Update to Kotlin 1.6.0